--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -47,19 +47,60 @@
               </div>
               <div class="col-5">
                 <!-- imagen del desayuno -->
-                <img  class="precio"src="../precio-sin-num.png" alt="" srcset="">
+                <img  class="precio"src="../600.png" alt="" srcset="">
               </div>
             </div>
             <div class="row mt-5">
               <div class="col-5">
                 <!-- imagen del desayuno -->
+                <img class="precio" src="../800.png" alt="" srcset="">
               </div>
               <div class="col-7 ">
                 <h2 class="marco text-center">CONTINENTAL:</h2>
                 <p class="text-end">Infusión + Medialunas o Tortillas o Tostadas / Manteca, Mermelada o Dulce + Soda y Jugo </p>
               </div>
             </div>
-            <div class="col-12 text-center marco p-3" style="font-size: 1.3rem;">PROMO LICUADO + 1/2 TOSTADO</div>
+            <div class="row mt-5">
+
+              <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">PROMO LICUADO + 1/2 TOSTADO</div>
+              <div class="col-6 mt-5">
+                <img class="precio" src="../1000.png" alt="" srcset="">
+              </div>
+            </div>
+            
+
+            <div class="row mt-5">
+              <div class="col-5">
+                <!-- imagen del desayuno -->
+                <img class="precio" src="../800.png" alt="" srcset="">
+              </div>
+              <div class="col-7"> 
+                <h2 class="marco text-center">LIGHT:</h2>
+                <p class="text-center">Infusión + Tostadas Integral + Crema, Mermelada + Jugo y Soda.</p>
+              </div>
+            </div>
+
+            <div class="row mt-5">
+              <div class="col-7 ">
+                <h2 class="marco text-center">PROTEICO:</h2>
+                <p class="text-start">Infusión + 2 Pan de Campo + Huevo Revuelto + Palta + Ens. de Fruta + Soda y Jugo</p>
+              </div>
+              <div class="col-5">
+                <!-- imagen del desayuno -->
+                <img class="precio" src="../1200.png" alt="" srcset="">
+              </div>
+            </div>
+            <div class="row mt-5">
+              <div class="col-5">
+                <!-- imagen del desayuno -->
+                <img class="precio" src="../1000.png" alt="" srcset="">
+              </div>
+              <div class="col-7"> 
+                <h2 class="marco text-center">Jamón y Queso:</h2>
+                <p class="text-end">Infusión + 2 Medialunas de Jamón y Queso + Soda y Jugo</p>
+              </div>
+            </div>
+
             <div class="row mt-5">
               <div class="col-7"> 
                 <h2 class="marco text-center">AMERICANO:</h2>
@@ -67,29 +108,15 @@
               </div>
               <div class="col-5">
                 <!-- imagen del desayuno -->
+                <img class="precio" src="../1200.png" alt="" srcset="">
               </div>
             </div>
+
+
             <div class="row mt-5">
               <div class="col-5">
                 <!-- imagen del desayuno -->
-              </div>
-              <div class="col-7 ">
-                <h2 class="marco text-center">PROTEICO:</h2>
-                <p class="text-end">Infusión + 2 Pan de Campo + Huevo Revuelto + Palta + Ens. de Fruta + Soda y Jugo</p>
-              </div>
-            </div>
-            <div class="row mt-5">
-              <div class="col-7"> 
-                <h2 class="marco text-center">Jamón y Queso:</h2>
-                <span>Infusión + 2 Medialunas de Jamón y Queso + Soda y Jugo</span>
-              </div>
-              <div class="col-5">
-                <!-- imagen del desayuno -->
-              </div>
-            </div>
-            <div class="row mt-5">
-              <div class="col-5">
-                <!-- imagen del desayuno -->
+                <img class="precio" src="../2000.png" alt="" srcset="">
               </div>
               <div class="col-7 ">
                 <h2 class="marco text-center">COMBO AMERICANO:</h2>
