--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -69,7 +69,7 @@
             </div>
             <div class="col-12 texto text-center text-light mt-5">
               <h3 class="marco">NAPOLITANA:</h3>
-              <span class="">Salsa-Muzza-Tomate-Aceituna Negra-Sardo</span>
+              <span class="">Salsa-Muzza-Tomate-Aceituna Verde</span>
 
             </div>
             <div class="col-12 texto text-center text-light mt-5">
@@ -84,12 +84,12 @@
             </div>
             <div class="col-12 texto text-center text-light mt-5">
               <h3 class="marco">FUGAZZETA:</h3>
-              <span class="">Salsa-Muzza-Cebolla-Aceituna</span>
+              <span class="">Salsa-Muzza-Cebolla</span>
 
              </div>  
              <div class="col-12 text-center texto text-light mt-5">
               <h3 class="marco">RUCULA:</h3>
-              <span class="">Salsa-Muzza-Rucula-Jamón Crudo</span>
+              <span class="">Salsa-Muzza-Rucula-Jamón Crudo-Aceitunas Negras</span>
 
               
           </div>
@@ -115,7 +115,7 @@
           </div>
           <div class="col-12 texto text-center text-light mt-5">
             <h3 class="marco">Cantinpalo:</h3>
-            <span class="">Salsa-Muzza-Cantinpalo</span>
+            <span class="">Salsa-Muzza-Cantinpalo-Aceitunas Negras</span>
 
            </div> 
           <div class="col-12 text-center texto text-light mt-5">
@@ -131,12 +131,12 @@
             </div>
             <div class="col-12 texto text-center text-light mt-5">
               <h3 class="marco">CHAMPIGNON:</h3>
-              <span class="">Salsa-Muzza-Jamón-Champignon</span>
+              <span class="">Salsa-Muzza-Jamón-Champignon-Sardo</span>
 
             </div>
             <div class="col-12 texto text-center text-light mt-5">
               <h3 class="marco">ALCACHOFAS:</h3>
-              <span class="">Salsa-Muzza-Jamón-Champignon-Alcachofas-Aceitunas</span>
+              <span class="">Salsa-Muzza-Jamón-Champignon-Alcachofas-Aceitunas-Sardo</span>
 
             </div>
             <div class="col-12 texto text-center text-light mt-5">
@@ -173,6 +173,16 @@
           <div class="col-12 texto text-center text-light mt-5">
             <h3 class="marco">SALCHICHA:</h3>
             <span class="">Muzza-Salchicha Parrillera</span>
+
+          </div>
+          <div class="col-12 texto text-center text-light mt-5">
+            <h3 class="marco">A CABALLO:</h3>
+            <span class="">Salsa-Muzza-Papas Fritas</span>
+
+          </div>
+          <div class="col-12 texto text-center text-light mt-5">
+            <h3 class="marco">DIABOLA:</h3>
+            <span class="">Salsa-Muzza-Longaniza</span>
 
           </div>
         </div>
