--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -78,28 +78,28 @@
               <!-- picadas -->
               <div class="col-6"></div>
               <div class="col-6 mt-5">
-                <h2 class="marco  text-center">PICADAS</h2>
+                <h2 class="marco  text-center">SANDWICH</h2>
               </div>
               <!-- contenido picadas -->
               <div class="col-6 mt-5 ">
                 <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
               </div>
               <div class="col-6 mt-5 text-end">
-                <p>Árabe P/ 2 personas <br>Tripa Rellena <br> Niño Envuelto <br> Empanadas Árabes y Tabbule</p>
+                <p>LOMO</p>
               </div>
 
               <div class="col-6 mt-5 ">
                 <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
               </div>
               <div class="col-6 mt-5 text-end">
-                <p>Tacos Mixtos c/4 Salsas</p>
+                <p>MILA</p>
               </div>
 
-              <div class="col-6 mt-5 ">
+              <div class="col-5 mt-5 ">
                 <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
               </div>
-              <div class="col-6 mt-5 text-end">
-                <p>Tabla de Fiambres</p>
+              <div class="col-7 mt-5 text-end">
+                <p>HAMBURGUESA</p>
               </div>
               <!-- fin picadas -->
 
