--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -35,7 +35,7 @@
       <div class="container">
         <div class="row ">
             <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
-              <a href="pizza.html">  <img class="redo" src="../pizza.jpg" alt="pizza" srcset=""> </a>
+              <a href="pizza.html">  <img class="redo" src="../abhishek-hajare-0UcHlaN-hgQ-unsplash.jpg" alt="pizza" srcset=""> </a>
             </div>
             <div class="col-12 text-center">
                 <span class="texto text-light ">Pizza</span> 
@@ -56,21 +56,21 @@
 
             </div>
             <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
-              <a href="ensalada.html">  <img class="redo" src="../ensalada.jpg" alt="ensalada" srcset=""> </a>
+              <a href="ensalada.html">  <img class="redo" src="../nadine-primeau--ftWfohtjNw-unsplash (1).jpg" alt="ensalada" srcset=""> </a>
             </div>
             <div class="col-12 text-center">
                 <span class="texto text-light ">Ensalada</span> 
 
             </div>
             <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-             <a href="bebidas.html"> <img class="redo" src="../bebidas.jpg" alt="Bebidas" srcset=""></a>
+             <a href="bebidas.html"> <img class="redo" src="../andrey-ilkevich-Qvnohn4GyJA-unsplash.jpg" alt="Bebidas" srcset=""></a>
            </div>
            <div class="col-12 text-center text-light">
                <span class="texto">Bebidas</span>
 
            </div>
            <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-            <a href="postres.html"> <img class="redo" src="../postres.png" alt="Postres" srcset=""></a>
+            <a href="postres.html"> <img class="redo" src="../kobby-mendez-idTwDKt2j2o-unsplash.jpg" alt="Postres" srcset=""></a>
          </div>
          <div class="col-12 text-center text-light">
              <span class="texto">Postre</span>
