--- a/menu-pizzamigo/web/postres.html
+++ b/menu-pizzamigo/web/postres.html
@@ -46,7 +46,7 @@
                 <p class="m"t-3>Porciones de Tarta</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../precio-sin-num.png" alt="" srcset="">
+                <img class="precio mt-2 " src="../500.png" alt="" srcset="">
               </div>
 
             </div>
@@ -56,7 +56,7 @@
                 <p class="mt-3">Flan</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../precio-sin-num.png" alt="" srcset="">
+                <img class="precio mt-2 " src="../400.png" alt="" srcset="">
               </div>
 
             </div>
@@ -66,7 +66,7 @@
                 <p class="mt-3">Budín de Pan</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../precio-sin-num.png" alt="" srcset="">
+                <img class="precio mt-2 " src="../400.png" alt="" srcset="">
               </div>
 
             </div>
@@ -76,7 +76,7 @@
                 <p class="mt-3">Helado</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../precio-sin-num.png" alt="" srcset="">
+                <img class="precio mt-2 " src="../600.png" alt="" srcset="">
               </div>
 
             </div>
@@ -86,7 +86,7 @@
                 <p class="mt-3">Ensalada de Fruta</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-4 " src="../precio-sin-num.png" alt="" srcset="">
+                <img class="precio mt-4 " src="../500.png" alt="" srcset="">
               </div>
 
             </div>
