--- a/menu-pizzamigo-english/web/index.html
+++ b/menu-pizzamigo-english/web/index.html
@@ -25,6 +25,7 @@
               <a class="nav-link text-light" href="ensalada.html">Salads</a>
               <a class="nav-link text-light" href="bebidas.html">Beverages</a>
               <a class="nav-link text-light" href="postres.html">Deserts</a>
+              <a class="text-light tit" href="../../menu-pizzamigo/web/index.html"><img class="logo-ingles " src="../../menu-pizzamigo/spanish-language.png"/> Spanish</a>
 
             </div>
           </div>
