--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -25,6 +25,7 @@
               <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
               <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
               <a class="nav-link text-light" href="postres.html">Postre</a>
+              <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles " src="../idioma-en-ingles.png"/> English</a>
 
             </div>
           </div>
@@ -33,6 +34,11 @@
       <!-- fin navbar -->
  
       <div class="container">
+        <!-- <div class="row">
+          <div class="col-12 texto text-end">
+            <a class="text-light" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles" src="../idioma-en-ingles.png"/></a>
+          </div>
+        </div> -->
         <div class="row ">
             <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
               <a href="pizza.html">  <img class="redo" src="../abhishek-hajare-0UcHlaN-hgQ-unsplash.jpg" alt="pizza" srcset=""> </a>
