--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -26,6 +26,7 @@
                   <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
                   <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
                   <a class="nav-link text-light" href="postres.html">Postre</a>
+                  <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles " src="../idioma-en-ingles.png"/> English</a>
                 </div>
               </div>
             </div>
