--- a/menu-pizzamigo/web/bebidas.html
+++ b/menu-pizzamigo/web/bebidas.html
@@ -33,6 +33,7 @@
             <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
             <a class="nav-link text-light" href="#">Bebidas</a>
             <a class="nav-link text-light" href="postres.html">Postre</a>
+            <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles " src="../idioma-en-ingles.png"/> English</a>
           </div>
         </div>
       </div>
