--- a/menu-pizzamigo-english/web/index.html
+++ b/menu-pizzamigo-english/web/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link text-light" href="plato.html">Lunch/Dinner</a>
               <a class="nav-link text-light" href="ensalada.html">Salads</a>
               <a class="nav-link text-light" href="bebidas.html">Beverages</a>
-              <a class="nav-link text-light" href="postres.html">Deserts</a>
+              <a class="nav-link text-light" href="postres.html">Desserts</a>
               <a class="text-light tit" href="../../menu-pizzamigo/web/index.html"><img class="logo-ingles " src="../../menu-pizzamigo/spanish-language.png"/> Spanish</a>
 
             </div>
@@ -74,7 +74,7 @@
             <a href="postres.html"> <img class="redo" src="../../menu-pizzamigo/kobby-mendez-idTwDKt2j2o-unsplash.jpg" alt="Postres" srcset=""></a>
          </div>
          <div class="col-12 text-center text-light">
-             <span class="texto">Deserts</span>
+             <span class="texto">Desserts</span>
 
          </div>
         </div>
