--- a/menu-pizzamigo-english/web/postres.html
+++ b/menu-pizzamigo-english/web/postres.html
@@ -28,7 +28,7 @@
               <a class="nav-link text-light" href="plato.html">Lunch/Dinner</a>
               <a class="nav-link text-light" href="ensalada.html">Salads</a>
               <a class="nav-link text-light" href="bebidas.html">Beverages</a>
-              <a class="nav-link text-light" href="#">Deserts</a>
+              <a class="nav-link text-light" href="#">Desserts</a>
             </div>
           </div>
         </div>
