--- a/menu-pizzamigo-english/web/ensalada.html
+++ b/menu-pizzamigo-english/web/ensalada.html
@@ -26,7 +26,7 @@
           <a class="nav-link text-light" href="plato.html">Lunch/Dinner</a>
           <a class="nav-link text-light" href="#">Salads</a>
           <a class="nav-link text-light" href="bebidas.html">Beverages</a>
-          <a class="nav-link text-light" href="postres.html">Deserts</a>
+          <a class="nav-link text-light" href="postres.html">Desserts</a>
         </div>
       </div>
     </div>
