--- a/menu-pizzamigo-english/web/bebidas.html
+++ b/menu-pizzamigo-english/web/bebidas.html
@@ -108,6 +108,15 @@
           <img class="precio"  src="../../menu-pizzamigo/500.png" alt="" srcset="">
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>FLAVORED WATER 375 cc.</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio"  src="../../menu-pizzamigo/500.png" alt="" srcset="">
+        </div>
+      </div>
       
       <!-- CERVEZA -->
       <div class="row mt-5">
