--- a/menu-pizzamigo-english/web/desayuno.html
+++ b/menu-pizzamigo-english/web/desayuno.html
@@ -238,21 +238,21 @@
             <p class="text-end">BUTTER & JAM OR CHEESE</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/400.png" alt="$300" srcset="">
+          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
           <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">SCRAMBLED EGGS</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/400.png" alt="$300" srcset="">
+          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
           <!-- precio -->
           </div>
           <div class="col-6 mt-5">
-            <p class="text-end">CAZUELA PALTA GUACAMOLE</p>
+            <p class="text-end">GUACAMOLE</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/400.png" alt="$300" srcset="">
+          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
           <!-- precio -->
           </div>
           <div class="col-6 mt-5">
