--- a/menu-pizzamigo/web/bebidas.html
+++ b/menu-pizzamigo/web/bebidas.html
@@ -109,6 +109,15 @@
           <img class="precio"  src="../500.png" alt="" srcset="">
         </div>
       </div>
+     
+       <div class="row">
+        <div class="col-6 mt-5">
+          <p>AGUA SABORIZADA 375   cc.</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio"  src="../500.png" alt="" srcset="">
+        </div>
+      </div>
       
       <!-- CERVEZA -->
       <div class="row mt-5">
