--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -50,10 +50,10 @@
           </div>
           <div class="row">
               <div class="col-6 d-flex justify-content-center">
-                <img  class ="precio-metro"src="../1900-chico-removebg-preview.png" alt="$1900" srcset="">
+                <img  class ="precio-metro"src="../2200.png" alt="$1900" srcset="">
               </div>
               <div class="col-6 d-flex justify-content-center">
-                <img  class ="precio-metro"src="../3200-chico-removebg-preview.png" alt="$3800" srcset="">
+                <img  class ="precio-metro"src="../4400.png" alt="$3800" srcset="">
               </div>
           </div>
           <div class="row text-start">
