--- a/menu-pizzamigo-english/web/pizza.html
+++ b/menu-pizzamigo-english/web/pizza.html
@@ -49,10 +49,10 @@
           </div>
           <div class="row">
               <div class="col-6 d-flex justify-content-center">
-                <img  class ="precio-metro"src="../../menu-pizzamigo/1900-chico-removebg-preview.png" alt="$1900" srcset="">
+                <img  class ="precio-metro"src="../../menu-pizzamigo/2200.png" alt="$1900" srcset="">
               </div>
               <div class="col-6 d-flex justify-content-center">
-                <img  class ="precio-metro"src="../../menu-pizzamigo/3200-chico-removebg-preview.png" alt="$3800" srcset="">
+                <img  class ="precio-metro"src="../../menu-pizzamigo/4400.png" alt="$3800" srcset="">
               </div>
           </div>
           <div class="row text-start">
