--- a/menu-pizzamigo-english/web/bebidas.html
+++ b/menu-pizzamigo-english/web/bebidas.html
@@ -196,13 +196,30 @@
           <img class="precio"  src="../../menu-pizzamigo/700.png" alt="" srcset="">
         </div>
       </div>
-      
+      <!-- TRAGOS -->
       <div class="row">
         <div class="col-6 mt-5">
           <p>FERNET + SMALL COKE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio"  src="../../menu-pizzamigo/800.png" alt="" srcset="">
+          <img class="precio"  src="../../menu-pizzamigo/1000.png" alt="" srcset="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>CAMPARI ORANGE</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio"  src="../../menu-pizzamigo/1000.png" alt="" srcset="">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>GANCIA</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio"  src="../../menu-pizzamigo/1000.png" alt="" srcset="">
         </div>
       </div>
 
