--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -49,46 +49,46 @@
                   <p>Milanesa With Garnish</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/1800.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2000.png" alt="2000" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Steak With Garnish</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2400.png" alt="2400" srcset="">
                 </div><div class="col-6 mt-5">
                   <p>Milanesa Napolitana With Garnish</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2200" srcset="">
                 </div><div class="col-6 mt-5">
                   <p>Barbecue Ribs With Spain Potatoes</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2400.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2600.png" alt="2600" srcset="">
                 </div><div class="col-6 mt-5">
                   <p>Chicken Steak With Garnish</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/1800.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2000.png" alt="2000" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Frontier Steak</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2500.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2700.png" alt="2700" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Steak with Mushrooms Sauce</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2500.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2700.png" alt="2700" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Chicken with mushrooms sauce</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2200" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Mix Brochet</p>
@@ -100,13 +100,13 @@
                   <p>Costelette With Garnish</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2200" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Milanesa with fried egg</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2200" srcset="">
                 </div>
                 <!-- fin de al plato -->
 
@@ -116,11 +116,11 @@
               </div>
               <div class="col-6 text-center">
                 <p>Per Unite</p>
-                <img class="precio" src="../../menu-pizzamigo/200.png" alt="" srcset="">
+                <img class="precio" src="../../menu-pizzamigo/250.png" alt="" srcset="">
               </div>
               <div class="col-6 text-center">
                 <p>Dozen</p>
-                <img class="precio" src="../../menu-pizzamigo/2000.png" alt="" srcset="">
+                <img class="precio" src="../../menu-pizzamigo/2500.png" alt="" srcset="">
               </div>
               <!-- contenido de entradas -->
               <div class="col-12 text-center mt-5">
@@ -155,14 +155,14 @@
               </div>
 
               <div class="col-6 mt-5 ">
-                <img class="precio " src="../../menu-pizzamigo/1800.png" alt="precio" srcset="">
+                <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
               </div>
               <div class="col-6 mt-5 text-end">
                 <p>MILA</p>
               </div>
 
               <div class="col-5 mt-5 ">
-                <img class="precio " src="../../menu-pizzamigo/1600.png" alt="precio" srcset="">
+                <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
               </div>
               <div class="col-7 mt-5 text-end">
                 <p>BURGUER</p>
