--- a/menu-pizzamigo/web/bebidas.html
+++ b/menu-pizzamigo/web/bebidas.html
@@ -203,9 +203,28 @@
           <p>FERNET + COCA CHICA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio"  src="../800.png" alt="" srcset="">
+          <img class="precio"  src="../1000.png" alt="" srcset="">
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>CAMPARI ORANGE</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio"  src="../1000.png" alt="" srcset="">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>GANCIA</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio"  src="../1000.png" alt="" srcset="">
+        </div>
+      </div>
+
       
     </div>
 
