--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -49,46 +49,46 @@
                   <p>Milanesa c/ Guarnición</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../1800.png" alt="precio" srcset="">
+                  <img class="precio " src="../2000.png" alt="$2000" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Bife de lomo c/ Guarnición</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2200.png" alt="precio" srcset="">
+                  <img class="precio " src="../2400.png" alt="$2400" srcset="">
                 </div><div class="col-6 mt-5">
                   <p>Napolitana c/ Guarnición</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../2200.png" alt="$2200" srcset="">
                 </div><div class="col-6 mt-5">
                   <p>Costillitas a la barbacoa c/ papas Españolas</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2400.png" alt="precio" srcset="">
+                  <img class="precio " src="../2600.png" alt="2600" srcset="">
                 </div><div class="col-6 mt-5">
                   <p>Bife de pollo c/Guarnición</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../1800.png" alt="precio" srcset="">
+                  <img class="precio " src="../2000.png" alt="2000" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Lomo a la Frontera</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2500.png" alt="precio" srcset="">
+                  <img class="precio " src="../2700.png" alt="2700" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Lomo al Champignon</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2500.png" alt="precio" srcset="">
+                  <img class="precio " src="../2700.png" alt="2700" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Pollo al champignon</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../2200.png" alt="2200" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Brochet Mixtos</p>
@@ -100,13 +100,13 @@
                   <p>Costeleta c/ Guarnición</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../2200.png" alt="2200" srcset="">
                 </div>
                 <div class="col-6 mt-5">
                   <p>Mila a Caballo c/ Guarnición</p>
                 </div>
                 <div class="col-6 mt-5">
-                  <img class="precio " src="../2000.png" alt="precio" srcset="">
+                  <img class="precio " src="../2200.png" alt="2200" srcset="">
                 </div>
                 <!-- fin de al plato -->
 
@@ -116,11 +116,11 @@
               </div>
               <div class="col-6 text-center">
                 <p>Unidad</p>
-                <img class="precio" src="../200.png" alt="" srcset="">
+                <img class="precio" src="../250.png" alt="" srcset="">
               </div>
               <div class="col-6 text-center">
                 <p>Docena</p>
-                <img class="precio" src="../2000.png" alt="" srcset="">
+                <img class="precio" src="../2500.png" alt="" srcset="">
               </div>
               <!-- contenido de entradas -->
               <div class="col-12 text-center mt-5">
@@ -155,14 +155,14 @@
               </div>
 
               <div class="col-6 mt-5 ">
-                <img class="precio " src="../1800.png" alt="precio" srcset="">
+                <img class="precio " src="../2000.png" alt="precio" srcset="">
               </div>
               <div class="col-6 mt-5 text-end">
                 <p>MILA</p>
               </div>
 
               <div class="col-5 mt-5 ">
-                <img class="precio " src="../1600.png" alt="precio" srcset="">
+                <img class="precio " src="../2000.png" alt="precio" srcset="">
               </div>
               <div class="col-7 mt-5 text-end">
                 <p>HAMBURGUESA</p>
@@ -221,11 +221,6 @@
               </div>
               
               <!-- fin de salsas -->
-              <!-- Postres -->
-              
-              <!-- fin postres -->
-
-
           </div>
         </div>
 
