--- a/menu-pizzamigo-english/web/bebidas.html
+++ b/menu-pizzamigo-english/web/bebidas.html
@@ -63,6 +63,15 @@
           <img class="precio"  src="../../menu-pizzamigo/1000.png" alt="" srcset="">
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>COKE 1,5L.</p>
+        </div>
+        <div class="col-6 mt-5">
+          <img class="precio"  src="../../menu-pizzamigo/1300.png" alt="1300" srcset="">
+        </div>
+      </div>
       
       <div class="row">
         <div class="col-6 mt-5">
@@ -175,7 +184,7 @@
           <p>CORONA 710cc</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio"  src="../../menu-pizzamigo/1600.png" alt="" srcset="">
+          <img class="precio"  src="../../menu-pizzamigo/1400.png" alt="" srcset="">
         </div>
       </div>
 
