--- a/menu-pizzamigo-english/web/ensalada.html
+++ b/menu-pizzamigo-english/web/ensalada.html
@@ -45,6 +45,7 @@
     <div class="col-12 mt-5 text-center">
       <p>YOUR OWN SALAD WITH 6 VARIETIES  OF INGREDIENTS</p>
     </div>
+    <div class="col-12  d-flex justify-content-center"><img class="precio" src="../../menu-pizzamigo/1800.png" alt="1800" srcset=""></div>
   </div>
   <div class="row mt-5">
     <div class="col-6">
